<resources>
    <string name="app_name">EWayBill</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_eway_bill_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="product_list">Product List</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="name">Name</string>
    <string name="unit_price">Unit Price</string>
    <string name="quantity">Quantity</string>
    <string name="view">View</string>
    <string name="action">Action</string>
    <string name="order">Order</string>
    <string name="price">Price</string>
    <string name="total_price">Total Price</string>
    <string name="remove">Remove</string>
    <string name="clear_cart">Clear Cart</string>
    <string name="checkout">Checkout</string>
    <string name="shop">Shop</string>
    <string name="delete_item">Delete Item</string>
    <string name="delete_item_message">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--Strings related to welcome Slider-->

    <string name="slide_1_title">E-Way Bill</string>

    <string name="slide_1_desc">Bulk Creation of E-Way Bill Masters.</string>



    <string name="slide_2_title">welcome slider</string>

    <string name="slide_2_desc">Welcome to the Bulk creation of E-Way Bill masters.Using this tools,one can prepare the JSON file to create the masters of
products,clients,suppliers and transporters in one ago.</string>

    <string name="slide_3_title">welcome slider</string>

    <string name="slide_3_desc">This tool enables the tax payers to createthe masters in two ways.
First method is cut and paste the products,clients,suppliers e.t.c as per the excel sheet format,from his automated system.</string>

    <string name="slide_4_title">welcome slider</string>
    <string name="slide_4_desc">Second method is to enter all the details one by one in the format and keep it ready.
</string>
    <string name="play_again_desc">welcome slider -> clear data</string>
    <string name="play_again"></string>

    <string name="unable_to_open_file">Unable to open file</string>
    <string name="text_accounts">All Accounts</string>

    <string name="hint_name">NAME</string>
    <string name="hint_username">USER NAME</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_password">PASSWORD</string>
    <string name="hint_confirm_password">CONFIRM PASSWORD</string>
    <string name="hint_register_mobile_no">MOBILE NO</string>
    <string name="hint_register_address">ADDRESS</string>
    <string name="hint_register_state">STATE</string>
    <string name="hint_register_pincode">PINCODE</string>
    <string name="text_login">LOGIN</string>
    <string name="text_register">REGISTER</string>
    <string name="error_message_name">ENTER FULL NAME</string>
    <string name="error_message_email">ENTER VALID EMAIL</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">ENTER PASSWORD</string>
    <string name="success_message">Registration Successful</string>
    <string name="client_success_message">Client details save Successful</string>
    <string name="client_failure_message">Account already Registered</string>
    <string name="supplier_success_message">Supplier details save Successful</string>
    <string name="supplier_success_update_message">Supplier details update Successful</string>
    <string name="client_success_update_message">Client details update Successful</string>
    <string name="transporter_success_update_message">Transporter details update Successful</string>
    <string name="supplier_failure_message">Data not saved</string>
    <string name="transporter_success_message">Transporter details save Successful</string>
    <string name="Order_success_message">Order details save Successful</string>
    <string name="transporter_failure_message">Data not saved</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="account_already_exists">Account Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>

    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>


    <string name="go_to_settings">Go to Settings</string>
    <string name="alert_storage_permission_message">Open Settings, then tap Permissions and turn on Storage to upload your resume.</string>
    <string name="alert_storage_permission_message_for_photo">Open Settings, then tap Permissions and turn on Storage to upload your photos.</string>
    <string name="alert_camera_permission_message_for_photo">Open Settings, then tap Permissions and turn on Camera to upload your photos.</string>
    <string name="snackbar_storage_permission_message">We’ll need storage permission so you can upload your resume.</string>
    <string name="snackbar_storage_permission_message_for_photos">We’ll need storage permission so you can upload your photos.</string>
    <string name="snackbar_camera_permission_message_for_photos">We’ll need camera permission so you can upload your photos.</string>
    <string name="alert_storage_permission_title">Grant Permission</string>
    <string name="cancel">cancel</string>


    <string name="Entercompanyname">Please Enter Company Name</string>
    <string name="Enterpassword">Please Enter Password</string>
    <string name="Enterconfirmpassword">Please Enter confirm Password</string>
    <string name="Entermpasswordmatch">Password and ConfirmPassword does not Match</string>
    <string name="EnterMobileNo">Please Enter Mobile Number</string>
    <string name="EnterGstinNO">Please Enter GSTIN Number</string>

    <string name="EnterEmailAddress">Please Enter Email Address</string>
    <string name="selectusertype">Please Select UserType</string>


    <string name="Entername">Please Enter Name</string>
    <string name="Entersupplier">Please Enter Supplier</string>

    <string name="Enterclient">Please Enter Client</string>

    <string name="EntervalidEmailAddress">Please Enter Valid Email Address</string>
    <string name="passwordpattern">Please Enter Minimum eight characters, at least one letter, one number and one special character</string>

</resources>
